# graduation-project-website

./: .gitignore  Book2025_FreshMart.docx  Graduation_Project_IEEE.docx  IEEE_DOCUMENTATION.md  README.md  capture-screenshots.mjs  generate-book-section.mjs  generate-code-screenshots.mjs  generate-ieee-doc.mjs  package.json  project.html
Sims/: Sims.pdsprj  Sims.pdsprj.TIKO7.alyyo.9.workspace
Sims/Project Backups/: Sims [Autosaved].pdsprj
client/: .eslintrc.cjs  .gitignore  DARK-MODE-FIX-COMPLETE.md  DARK-MODE-IMPROVEMENTS.md  DELIVERY-OPTIONS-GUIDE.md  FEATURES-INTEGRATION.md  MULTI-PAGE-GUIDE.md  PWA-GUIDE.md  PWA-IMPLEMENTATION-SUMMARY.md  PWA-SETUP-CHECKLIST.md  README-COMPLETE.md  ROUTING-UPDATE.md  TEST-ALL-FEATURES.md  UX-ENHANCEMENTS-GUIDE.md  env.example  index.html  package.json  vercel.json  vite.config.js
client/api/: index.js
client/public/: manifest.json  sw.js
client/src/: App.jsx  main.jsx
docs/: ROS2_INTEGRATION.md
robot-control/: README.md  raspberry_pi_hub.py
robot-control/arduino_base_controller/: arduino_base_controller.ino
ros2/: .env.example  README.md  requirements.txt
ros2/src/grocery_robot_bridge/: package.xml  setup.cfg  setup.py
ros2/src/grocery_robot_bridge/grocery_robot_bridge/: config.py  robot_executor_node.py  website_bridge_node.py
ros2/src/grocery_robot_bridge/launch/: integration.launch.py
ros2/src/grocery_robot_interfaces/: CMakeLists.txt  package.xml
ros2/src/grocery_robot_interfaces/action/: ExecuteOrder.action
ros2/src/grocery_robot_interfaces/msg/: OrderTask.msg  ProductItem.msg  RobotLocation.msg  RobotStatus.msg  TaskFeedback.msg
ros2/src/grocery_robot_interfaces/srv/: CancelOrderTask.srv  GetRobotStatus.srv
ros2/tools/: rest_robot_simulator.py
server/: .eslintrc.cjs  env.example  package.json
server/api/: index.js
server/scripts/: reseedProducts.js
server/src/: app.js  index.js
(+69 files in other folders)
